--- a/config/master.yaml
+++ b/config/master.yaml
@@ -119,6 +119,30 @@ MASTER:
              GF_Model: [GF_Model_IV,0]
              ascertainment: 1
              Inferred_Demographies: [True,Inferred_Pop_History/Vindjia_PSMC_inferred_Demography_unbiased_from_Mut_Rate_new.txt,Inferred_Pop_History/Yorubans_MSMC_inferred_Demography_unbiased_from_Mut_Rate.txt,Inferred_Pop_History/CEU_MSMC_inferred_Demography_unbiased_from_Mut_Rate.txt]
+      _Complex_Demographies_Scenario_1_:
+             simulation: '_MS_fixed_mean_0_Complex'
+             min_dist_Fit: 0.05
+             GF_Model: [GF_Model_IV,0]
+             ascertainment: 0
+             Complex_Demography: [True,Inferred_Pop_History/Vindjia_PSMC_inferred_Demography_unbiased_from_Mut_Rate_new.txt,Inferred_Pop_History/Yorubans_MSMC_inferred_Demography_unbiased_from_Mut_Rate.txt,Inferred_Pop_History/CEU_MSMC_inferred_Demography_unbiased_from_Mut_Rate.txt]
+      _Complex_Demographies_Scenario_2_:
+             simulation: '_MS_fixed_mean_0_Complex'
+             min_dist_Fit: 0.05
+             GF_Model: [GF_Model_IV,0]
+             ascertainment: 1
+             Complex_Demography: [True,Inferred_Pop_History/Vindjia_PSMC_inferred_Demography_unbiased_from_Mut_Rate_new.txt,Inferred_Pop_History/Yorubans_MSMC_inferred_Demography_unbiased_from_Mut_Rate.txt,Inferred_Pop_History/CEU_MSMC_inferred_Demography_unbiased_from_Mut_Rate.txt]
+      _Complex_Demographies_Scenario_3_:
+             simulation: '_MS_fixed_mean_5_Complex'
+             min_dist_Fit: 0.05
+             GF_Model: [GF_Model_IV,0]
+             ascertainment: 0
+             Complex_Demography: [True,Inferred_Pop_History/Vindjia_PSMC_inferred_Demography_unbiased_from_Mut_Rate_new.txt,Inferred_Pop_History/Yorubans_MSMC_inferred_Demography_unbiased_from_Mut_Rate.txt,Inferred_Pop_History/CEU_MSMC_inferred_Demography_unbiased_from_Mut_Rate.txt]
+      _Complex_Demographies_Scenario_4_:
+             simulation: '_MS_fixed_mean_5_Complex'
+             min_dist_Fit: 0.05
+             GF_Model: [GF_Model_IV,0]
+             ascertainment: 1
+             Complex_Demography: [True,Inferred_Pop_History/Vindjia_PSMC_inferred_Demography_unbiased_from_Mut_Rate_new.txt,Inferred_Pop_History/Yorubans_MSMC_inferred_Demography_unbiased_from_Mut_Rate.txt,Inferred_Pop_History/CEU_MSMC_inferred_Demography_unbiased_from_Mut_Rate.txt]
       _Recombination_Map_Scenario_0_:
              simulation: '_MS_fixed_mean_0_'
              min_dist_Fit: 0.05
@@ -177,6 +201,34 @@ MASTER:
              ascertainment: 1
              Recombination_Map: [True,Recombination_Maps/Scaled_Genetic_AAMap.txt]
              Inferred_Demographies: [True,Inferred_Pop_History/Vindjia_PSMC_inferred_Demography_unbiased_from_Mut_Rate_new.txt,Inferred_Pop_History/Yorubans_MSMC_inferred_Demography_unbiased_from_Mut_Rate.txt,Inferred_Pop_History/CEU_MSMC_inferred_Demography_unbiased_from_Mut_Rate.txt]
+      _Recombination_Map_and_Complex_Demographies_Scenario_1_:
+             simulation: '_MS_fixed_mean_0_Complex'
+             min_dist_Fit: 0.02
+             GF_Model: [GF_Model_IV,0]
+             ascertainment: 0
+             Recombination_Map: [True,Recombination_Maps/Scaled_Genetic_AAMap.txt]
+             Complex_Demography: [True,Inferred_Pop_History/Vindjia_PSMC_inferred_Demography_unbiased_from_Mut_Rate_new.txt,Inferred_Pop_History/Yorubans_MSMC_inferred_Demography_unbiased_from_Mut_Rate.txt,Inferred_Pop_History/CEU_MSMC_inferred_Demography_unbiased_from_Mut_Rate.txt]
+      _Recombination_Map_and_Complex_Demographies_Scenario_2_:
+             simulation: '_MS_fixed_mean_0_Complex'
+             min_dist_Fit: 0.02
+             GF_Model: [GF_Model_IV,0]
+             ascertainment: 1
+             Recombination_Map: [True,Recombination_Maps/Scaled_Genetic_AAMap.txt]
+             Complex_Demography: [True,Inferred_Pop_History/Vindjia_PSMC_inferred_Demography_unbiased_from_Mut_Rate_new.txt,Inferred_Pop_History/Yorubans_MSMC_inferred_Demography_unbiased_from_Mut_Rate.txt,Inferred_Pop_History/CEU_MSMC_inferred_Demography_unbiased_from_Mut_Rate.txt]
+      _Recombination_Map_and_ComplexDemographies_Scenario_3_:
+             simulation: '_MS_fixed_mean_5_Complex'
+             min_dist_Fit: 0.02
+             GF_Model: [GF_Model_IV,0]
+             ascertainment: 0
+             Recombination_Map: [True,Recombination_Maps/Scaled_Genetic_AAMap.txt]
+             Complex_Demography: [True,Inferred_Pop_History/Vindjia_PSMC_inferred_Demography_unbiased_from_Mut_Rate_new.txt,Inferred_Pop_History/Yorubans_MSMC_inferred_Demography_unbiased_from_Mut_Rate.txt,Inferred_Pop_History/CEU_MSMC_inferred_Demography_unbiased_from_Mut_Rate.txt]
+      _Recombination_Map_and_Complex_Demographies_Scenario_4_:
+             simulation: '_MS_fixed_mean_5_Complex'
+             min_dist_Fit: 0.02
+             GF_Model: [GF_Model_IV,0]
+             ascertainment: 1
+             Recombination_Map: [True,Recombination_Maps/Scaled_Genetic_AAMap.txt]
+             Complex_Demography: [True,Inferred_Pop_History/Vindjia_PSMC_inferred_Demography_unbiased_from_Mut_Rate_new.txt,Inferred_Pop_History/Yorubans_MSMC_inferred_Demography_unbiased_from_Mut_Rate.txt,Inferred_Pop_History/CEU_MSMC_inferred_Demography_unbiased_from_Mut_Rate.txt]
       Close_to_End_recent_GF_0:
              simulation: 'Close_to_End_Recent_GF_fixed_mean_0_'
              min_dist_Fit: 0.05
