hide test stuff

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 Test_Fitting_Multiple_times.R 
 .gitignore 
 .RData
+Test_stuff/Admixture_Time_Inference_Paper_Draft_2.Rmd
+Test_stuff/ATE_LATEX_TEST.pdf
+Test_stuff/ATE_LATEX_TEST.Rmd
+Test_stuff/ATE_LATEX_TEST.tex
+Test_stuff/ATE_mathmetical_reference.Rmd
+Test_stuff/Ploting_ideas_new_Bayesian_model.R
+
