scenarios named different

--- a/config/control.yaml
+++ b/config/control.yaml
@@ -1,5 +1,5 @@
 CONTROL:
-       Fig_1_A_new:
+       Fig_1_A_corrected:
              _Scenario_1_:
              _Scenario_2_:
              _Scenario_3_:
@@ -10,7 +10,7 @@ CONTROL:
              _Scenario_8_:
              _Scenario_9_:
              _Scenario_10_:
-       Fig_1_B:
+       Fig_1_B_corrected:
              _Scenario_11_:
              _Scenario_12_:
              _Scenario_13_:
